- Replaced help icon with question #294 - Removed extra horizontal padding on help messages - Reduced spacing between prev / next nav buttons and content - Removed extra left padding on comment blocks - Added animation to progress bar - Resolved issue with Place of Birth label being truncated - Add new question icon

--- a/src/components/Section/Identification/OtherNames/OtherNames.scss
+++ b/src/components/Section/Identification/OtherNames/OtherNames.scss
@@ -14,20 +14,10 @@
             max-width: 64rem !important;
         }
     }
-
     .maiden-help-icon {
-        margin-left: -1.6rem;
-        margin-top: 1rem;
     }
-    
     .used-help-icon {
-        vertical-align: top;
-        margin-top: 7.3rem;
-        margin-left: -15rem;
     }
-
     .reason-help-icon {
-        vertical-align: top;
-        margin-top: 10rem;
     }
 }
